set(LUNA_MINIMAL_RHI_TRIANGLE_SHADER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Shaders)
set(LUNA_MINIMAL_RHI_TRIANGLE_SHADER_OUTPUT_DIR ${PROJECT_BINARY_DIR}/Shaders/MinimalRhiTriangle)

set(LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_SOURCE ${LUNA_MINIMAL_RHI_TRIANGLE_SHADER_SOURCE_DIR}/triangle.vert)
set(LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_SOURCE ${LUNA_MINIMAL_RHI_TRIANGLE_SHADER_SOURCE_DIR}/triangle.frag)
set(LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_OUTPUT ${LUNA_MINIMAL_RHI_TRIANGLE_SHADER_OUTPUT_DIR}/triangle.vert.spv)
set(LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_OUTPUT ${LUNA_MINIMAL_RHI_TRIANGLE_SHADER_OUTPUT_DIR}/triangle.frag.spv)

add_custom_command(
    OUTPUT ${LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_OUTPUT}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${LUNA_MINIMAL_RHI_TRIANGLE_SHADER_OUTPUT_DIR}
    COMMAND ${Vulkan_GLSLC_EXECUTABLE} -fshader-stage=vert ${LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_SOURCE} -o ${LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_OUTPUT}
    DEPENDS ${LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_SOURCE}
    VERBATIM
)

add_custom_command(
    OUTPUT ${LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_OUTPUT}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${LUNA_MINIMAL_RHI_TRIANGLE_SHADER_OUTPUT_DIR}
    COMMAND ${Vulkan_GLSLC_EXECUTABLE} -fshader-stage=frag ${LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_SOURCE} -o ${LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_OUTPUT}
    DEPENDS ${LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_SOURCE}
    VERBATIM
)

add_custom_target(
    LunaMinimalRhiTriangleShaders
    DEPENDS
        ${LUNA_MINIMAL_RHI_TRIANGLE_VERTEX_SHADER_OUTPUT}
        ${LUNA_MINIMAL_RHI_TRIANGLE_FRAGMENT_SHADER_OUTPUT}
)

add_executable(
    LunaMinimalRhiTriangle
    main.cpp
)

add_dependencies(LunaMinimalRhiTriangle LunaMinimalRhiTriangleShaders)

target_include_directories(
    LunaMinimalRhiTriangle
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(
    LunaMinimalRhiTriangle
    PRIVATE
        LunaCore
)

target_compile_definitions(
    LunaMinimalRhiTriangle
    PRIVATE
        LUNA_MINIMAL_RHI_TRIANGLE_SHADER_ROOT="${PROJECT_BINARY_DIR}/Shaders/MinimalRhiTriangle"
)

luna_configure_runtime_output(LunaMinimalRhiTriangle)
